[package]
name = "ai-req-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13"
actix-web = "4"
actix-http = "3"
reqwest = {version="0.11",features = ["stream", "rustls-tls"]}
tokio = {version="1",features=["full"]}
tokio-stream = {version="0.1.3",features = ["sync"]}
futures = "0.3"
futures-util = {version="0.3.17",default-features = false, features=["std"]}
url = "2.2"
clap = {version = "4",features = ["derive"]}
env_logger = "0.11"
log = "0.4"
lazy_static = "1"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
